<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="520dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- This is the added FrameLayout -->


                <android.support.v7.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="490dp"

                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="50dp"
                    app:cardUseCompatPadding="false" />


            </FrameLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                >

                <LinearLayout
                    android:id="@+id/imageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/EditorStyle"
                        android:layout_height="35dp"
                        android:gravity="top"
                        android:paddingTop="16dp"
                        android:text="@string/image"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <com.makaroni.chocho.EditorImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:src="@drawable/imagetest" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/article"
                    android:layout_marginTop="25dp"
                    style="@style/EditorElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageLayout">

                    <TextView
                        style="@style/EditorStyle"
                        android:paddingLeft="6dp"
                        android:text="@string/article"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/articleET"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            style="@style/EditTextStyle" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/company"
                    style="@style/EditorElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/article">

                    <TextView
                        style="@style/EditorStyle"
                        android:text="@string/manufacturer"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/manufacturerET"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            style="@style/EditTextStyle"
                             />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    style="@style/EditorElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/EditorStyle"

                        android:text="@string/type"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/type_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    style="@style/EditorElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/EditorStyle"

                        android:text="@string/subtype"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <Spinner
                        android:id="@+id/subtype_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"


                        app:layout_constraintEnd_toEndOf="parent"

                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/type_spinner" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/model"
                    style="@style/EditorElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <TextView
                        style="@style/EditorStyle"
                        android:text="@string/modelName"
                        android:textAlignment="viewStart"
                        android:textStyle="bold">

                    </TextView>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/modelNameET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            style="@style/EditTextStyle" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/railway"
                    style="@style/EditorElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/model">

                    <TextView
                        style="@style/EditorStyle"
                        android:gravity="top"

                        android:text="@string/railwayCompany"
                        android:textSize="14sp"
                        android:textStyle="bold">

                    </TextView>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/railwayCompanyET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/EditTextStyle" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    style="@style/EditorElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/railway">

                    <TextView
                        style="@style/EditorStyle"
                        android:gravity="top"

                        android:text="@string/note"
                        android:textStyle="bold">

                    </TextView>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/noteET"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:gravity="start"
                            style="@style/EditTextStyle" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>