<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.makaroni.chocho.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="116dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:background="@color/design_default_color_primary_dark"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorMain"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView">

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="300dp"
            android:layout_height="137dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="159dp"
            android:layout_marginEnd="8dp"
            android:background="@color/design_default_color_primary_dark"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/text_trains"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/rhodium_libre"
        android:gravity="center"
        android:text="@string/allTrains"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/text_locomotives"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rhodium_libre"
        android:gravity="center"
        android:text="@string/locomotives"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_trains" />

    <TextView
        android:id="@+id/text_wagons"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rhodium_libre"
        android:gravity="center"
        android:text="@string/wagons"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_locomotives" />

    <TextView
        android:id="@+id/text_search"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rhodium_libre"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_wagons" />

    <TextView
        android:id="@+id/collection"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="155dp"

        android:fontFamily="@font/rhodium_libre"
        android:gravity="center"
        android:text=" in your collection"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_trains"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/trains_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="206dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/rhodium_libre"
        android:text="43"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/collection"
        app:layout_constraintEnd_toEndOf="@+id/collection"
        app:layout_constraintStart_toStartOf="@+id/collection"
        app:layout_constraintTop_toTopOf="@+id/collection" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_train" />

</android.support.constraint.ConstraintLayout>